--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.mingsoft</groupId>
 	<artifactId>ms-basic</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>${project.groupId}:${project.artifactId}</name>
 	<description>ms-basic tools Library</description>
@@ -28,8 +28,8 @@
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/ming-soft/ms-basic.git</connection>
-		<developerConnection>scm:git:git://github.com/ming-soft/ms-basic.git</developerConnection>
+		<connection>scm:git:https://github.com/ming-soft/ms-basic.git</connection>
+		<developerConnection>scm:git:https://github.com/ming-soft/ms-basic.git</developerConnection>
 		<url>https://github.com/ming-soft/ms-basic</url>
 	  <tag>ms-basic-1.0.0</tag>
   </scm>
